# agent-seo-engine

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  llms.txt  pyproject.toml  server.json
docs/: pypi-publishing.md
examples/: article.md  claude-desktop.json  hermes.yaml
src/agent_seo_engine/: __init__.py  agent.py  cli.py  intent.py  mcp_server.py  opportunity.py  quality.py
tests/: test_agent_seo_engine.py
